fixed minor issue about hamburger menu z-index

--- a/src/components/adopt/adopt-card/adoptCard.module.scss
+++ b/src/components/adopt/adopt-card/adoptCard.module.scss
@@ -42,6 +42,7 @@
 
     .breed {
       color: $secondary-color;
+      word-break: normal;
     }
 
     .title {
